--- a/index.html
+++ b/index.html
@@ -18,7 +18,108 @@
     <title>Snap</title>
   </head>
   <body>
+    <header>
+      <div class="container">
+        <nav>
+          <div id="menu">
+            <a href="#">
+              <img src="./src/img/logo.svg" alt="Logo snap">
+            </a>
+            <button id="btn_menu-open">
+              <img src="./src/img/icon-menu.svg" alt="Icone do menu">
+            </button>
+          </div>
+          <div id="nav">
+              <button id="btn_menu-close">
+                <img src="./src/img/icon-close-menu.svg" alt="Icone Menu Close">
+              </button>
+              <ul>
+                <li>
+                  <a id="features" href="#">
+                    Features
+                    <img class="arrowF" src="./src/img/icon-arrow-down.svg" alt="Arrow down">
+                  </a>
+                  <div class="dropdown dropdown_features">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <img src="./src/img/icon-todo.svg" alt="Icone de Todo list">
+                          Todo List
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <img src="./src/img/icon-calendar.svg" alt="Icone de Calendar">
+                          Calendar
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <img src="./src/img/icon-reminders.svg" alt="Icone de Reminders">
+                          Reminders
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <img src="./src/img/icon-planning.svg" alt="Icone de Planning">
+                          Planning
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a id="company" href="#">
+                    Company
+                    <img class="arrowC" src="./src/img/icon-arrow-down.svg" alt="Arrow down">
+                  </a>
+                  <div class="dropdown dropdown_company">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          History
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          Our Team
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          Blog
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a href="#">
+                    Careers
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    About
+                  </a>
+                </li>
+              </ul>
+              <div id="authentication">
+                <a href="#">
+                  Login
+                </a>
+                <a href="#">
+                  Register
+                </a>
+              </div>
+          </div>
+          <div id="backdrop"></div>
+        </nav>
+      </div>
+    </header>
     
-    
+
+
+    <script src="./src/js/script.js"></script>
   </body>
 </html>
