--- a/index.html
+++ b/index.html
@@ -118,6 +118,29 @@
       </div>
     </header>
     
+    <section id="hero">
+      <div class="container">
+        <div class="row">
+          <div id="imagem">
+          </div>
+          <div id="cta">
+            <h1>Make remote work</h1>
+            <p>
+              Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.
+            </p>
+            <a href="#">
+              Learn more
+            </a>
+            <div id="brands">
+              <img src="./src/img/client-databiz.svg" alt="Logo databix">
+              <img src="./src/img/client-audiophile.svg" alt="Logo audio phile">
+              <img src="./src/img/client-meet.svg" alt="Logo meet">
+              <img src="./src/img/client-maker.svg" alt="Logo maker">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
     <script src="./src/js/script.js"></script>
