--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
     </section>
 
 
+    <footer>
+      <p>
+        Challenge by <a href="https://www.frontendmentor.io/challenges/intro-section-with-dropdown-navigation-ryaPetHE5/hub/intro-section-with-dropdown-navigation-ZCxZdYBBtE" target="_blank">Frontend Mentor<br/></a>. 
+    Coded by <a href="https://github.com/dgleyramos1" target="_blank">Dgley Ramos</a>.
+      </p>
+    </footer>
+
     <script src="./src/js/script.js"></script>
   </body>
 </html>
